tests/trybuild_unavailable_panicking_macros/bump_format.stderr
error: the potentially panicking api of `bump_format!` is not available
       help: enable `bump-scope`'s "panic-on-alloc" feature or use `try`:
       `bump_format!(try in bump, "{greeting}, {name}!")`
 --> tests/unavailable_panicking_macros/bump_format.rs:4:5
  |
4 |     bump_format!(in bump, "{greeting}, {name}!")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__bump_format_panic_on_alloc` which comes from the expansion of the macro `bump_format` (in Nightly builds, run with -Z macro-backtrace for more info)
